Bug 63779 - search is always case sensitive
Summary: search is always case sensitive
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.0.3.1 rc
Hardware: All All
: high blocker
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.1.0 target:4.0.3
Keywords: regression
: 63705 67126 (view as bug list)
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2013-04-21 15:40 UTC by Florian Effenberger
Modified: 2013-07-21 01:00 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Effenberger 2013-04-21 15:40:50 UTC
The search is always case sensitive, no matter if done via the search bar on the bottom, or via the search and replace dialogue.

Steps to reproduce:
1. Create a new document.
2. Type "This is a Test." (Test with capital T)
3. Search for "test", while case-sensitive search is DISABLED.
4. Result: Nothing.
5. Search for "Test" (with capital t).
6. Result found
Comment 1 Florian Reisinger 2013-04-21 15:45:58 UTC
Reproduceable with Version: 4.1.0.0.alpha0+
Build ID: 03a36ed0fb81088358d7cfc3068a7be9878f2f8 @Ubuntu 13.04


REGRESSION between Version 4.0.2.2 (Build ID: 4c82dcdd6efcd48b1d8bba66bfe1989deee49c3) and Version 4.0.3.1 (Build ID: a67943cd4d125208f4ea7fa29439551825cfb39) @ Windows 7 x64

Florian E.: Forgot to mention, that he used MacOS....
Comment 2 Joel Madero 2013-04-21 16:37:28 UTC
Michael - I know you've had some experience with the find function, want to dig into this one? I agree with the major prioritization, looks like "match case" is treated like it's always disabled
Comment 3 Joel Madero 2013-04-21 16:40:59 UTC
ah, well I just tested on 
Version: 4.1.0.0.alpha0+
Build ID: 07c1b61933c24f9dec0793cf881a2d18baf924a
Last Commit Date:   Fri Apr 19 18:46:34 2013 +0300


I DO NOT see the problem. So, maybe already fixed? Florian, when was your last commit date (go into build folder and do git log, grab the top date you see)
Comment 4 GerardF 2013-04-21 17:05:20 UTC
Reproduceable with Dev 4.1.0. (build 2013-03-14).

Works fine with 3.6.5 and 4.0.1.
I can't test with 4.0.2
Comment 5 Joel Madero 2013-04-21 17:13:59 UTC
Can you install newer dev version? I think it may have been fixed recently (last week or two)
Comment 6 Florian Effenberger 2013-04-21 17:50:18 UTC
I have some really urgent stuff to do and no testing machine at hand, so I can't test before the end of this week - if someone else could verify this time it's fixed in a nightly, that'd be great ;) Sorry, deadlines pressing a bit ... :/
Comment 7 Florian Reisinger 2013-04-22 16:17:38 UTC
NOT Working with:
commit 8f4fc74c34df6efd6b74aacc610bf6f52b615aa5
Date:   Fri Apr 19 19:10:54 2013 -0400 @Ubuntu 13.04 

That should have happened in 4.0 branch between 4.0.2.2 and 4.0.3.1 --> Fix on master might be independant (as it is not working there either that might be wrong....)
Comment 8 Jorendc 2013-04-22 16:25:09 UTC
I still can reproduce this using 

master~2013-04-22_04.46.39_LibreOfficeDev_4.1.0.0.alpha0_MacOS_x86-64
Version: 4.1.0.0.alpha0+ Build ID: fdd24a57655c3d15addeeca12e844cc1cd4e176 (downloaded here: http://dev-builds.libreoffice.org/daily/master/MacOSX-X86_64@30/)
Comment 9 rpr 2013-04-30 06:51:11 UTC
*** Bug 63705 has been marked as a duplicate of this bug. ***
Comment 10 Sean Carlos 2013-05-02 07:30:13 UTC
This bug impacts Calc as well. Case insensitive search works in 4.0.2.2; broke in 4.0.3.1 & 4.0.3.2. Tested on Linux x64
Comment 11 rpr 2013-05-02 09:30:40 UTC
Actually, the bug exists in all LibreOffice components that use the search box: Writer, Calc, Impress, Draw. Tested on LibO 4.0.3.1 for MS Windows.
Comment 12 Michael Stahl 2013-05-02 09:37:36 UTC
Eike, you did something with regex recently
that could have broken this between 4.0.2.2 and 4.0.3.1 ?
Comment 13 Eike Rathke (retired, only occasionally showing up) 2013-05-02 11:03:52 UTC
Note that this is NOT regex search, it works fine if regex is enabled..
Comment 14 Eike Rathke (retired, only occasionally showing up) 2013-05-02 12:04:55 UTC
Marking as blocker, simple search functionality quite unusable..
Comment 15 Commit Notification 2013-05-02 13:51:39 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=db46a7336e330516f4df4e41f6895aa1afb03450

resolved fdo#63779 case-insensitive non-regex search broken



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Eike Rathke (retired, only occasionally showing up) 2013-05-02 13:52:37 UTC
Pending review for 4-0 as https://gerrit.libreoffice.org/3741
and for 4-0-3 as https://gerrit.libreoffice.org/3742
Comment 17 Commit Notification 2013-05-02 15:27:47 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=769b797884c8df5a13ee6a9290e621354ae4c49c&h=libreoffice-4-0

resolved fdo#63779 case-insensitive non-regex search broken


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2013-05-02 15:44:32 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-0-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6216457a8f7f9685ed088e0bcf9fa52a98eaab71&h=libreoffice-4-0-3

resolved fdo#63779 case-insensitive non-regex search broken


It will be available already in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 m_a_riosv 2013-07-20 22:55:25 UTC
*** Bug 67126 has been marked as a duplicate of this bug. ***
Comment 20 Volkan 2013-07-21 01:00:43 UTC
*** Bug 67126 has been marked as a duplicate of this bug. ***