resolved fdo#63779 case-insensitive non-regex search broken

Broken with 531538892795bec909bb8baff6bbf9e19baf809e

Change-Id: I0302baee0532ab8f10853c648bf695a58cfe273c